# iris_dnn

./: README.md  pyproject.toml  test.ipynb
src/: main.py
src/iris_dnn/: DNN.py  __init__.py  config.py  dataset.py
