[project]
name = "iris-dnn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fukuba-shuma", email = "calculus.fukuba@gmail.com" }
]
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.3",
    "matplotlib>=3.8.1",
    "scipy>=1.11.3",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.26.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
